--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ h2 {
   font-size: 1.8rem;
 }
 button span {
-  border-left: solid 1px #70757a;
+  border-left: solid 1px #fff;
   margin: 0 4px;
 }
 .time p {
